tests/reference/asr-incorrect_type_where_01-8974c02.stderr
semantic error: the argument to `where` must be an array
 --> tests/errors/incorrect_type_where_01.f90:5:10
  |
5 |    where(.true.) b = 12121
  |          ^^^^^^ 
